@@ -5,3 +5,4 @@ useDynLib(expm, .registration = TRUE)
 export(expm)
 export("%^%")
 export(dgebal)
+export(logm)
